@@ -1,0 +1,7 @@
+package me.tye.filemanager.util.exceptions;
+
+public class ModrinthAPIException extends Exception{
+    public ModrinthAPIException(String cause) {
+        super(cause);
+    }
+}
